@@ -22,10 +22,12 @@ Added Help message
 Added support for multiple definition files
 Added Test0 to demonstrate support for quote
 Added Test1 to demonstrate support for list, cons, car, cdr, null? and cond
+Added test target to make
 
 ** Changed
 Makefile is modified to follow bin standard
 Renamed resulting binary to slow_lisp to prevent namespace conflicts in bin
+Enhanced basic tests
 
 ** Fixed
 makefile now does proper cleanup
